--- a/app/views/hyrax/stats/work.html.erb
+++ b/app/views/hyrax/stats/work.html.erb
@@ -1,6 +1,6 @@
 <!-- Adapted from jquery-flot examples https://github.com/flot/flot/blob/master/examples/visitors/index.html -->
 <%= javascript_tag do %>
-  var hyrax_item_stats = <%= @stats.to_flot.to_json.html_safe %>;
+  var hyrax_item_stats = <%= raw json_escape @stats.to_flot.to_json %>;
 <% end %>
 
 <%= content_tag :h1, @stats, class: "lower" %>
