--- a/app/views/hyrax/users/_activity_log.html.erb
+++ b/app/views/hyrax/users/_activity_log.html.erb
@@ -9,7 +9,7 @@
   <% events.each do |event| %>
     <% next if event[:action].blank? or event[:timestamp].blank? %>
     <tr>
-      <td><%= event[:action].html_safe %></td>
+      <td><%= sanitize event[:action] %></td>
       <td><%= time_ago_in_words(Time.zone.at(event[:timestamp].to_i)) %> ago</td>
     </tr>
   <% end %>
